Ported babeltrace_cuda to babletrace2.

--- a/cuda/babeltrace_cuda.in
+++ b/cuda/babeltrace_cuda.in
@@ -2,8 +2,8 @@
 DATADIR = File.join("@prefix@", "share")
 $:.unshift(DATADIR) if File::directory?(DATADIR)
 require 'optparse'
-require 'babeltrace'
-require 'babeltrace/ctf'
+require 'babeltrace2'
+require 'find'
 require 'yaml'
 require 'pp'
 require 'babeltrace_cuda_lib'
@@ -31,29 +31,58 @@ OptionParser.new do |opts|
 
 end.parse!
 
-c = Babeltrace::Context::new
-traces = c.add_traces(path: ARGV[0])
+ctf_fs = BT2::BTPlugin.find("ctf").get_source_component_class_by_name("fs")
+utils_muxer = BT2::BTPlugin.find("utils").get_filter_component_class_by_name("muxer")
+text_pretty = BT2::BTPlugin.find("text").get_sink_component_class_by_name("pretty")
 
-puts "#{c.get_timestamp_begin.strftime("%Y-%m-%d %H:%M:%S.%9L %z")} -- #{c.get_timestamp_end.strftime("%Y-%m-%d %H:%M:%S.%9L %z")}"
+trace_locations = Find.find(*ARGV).reject { |path|
+    FileTest.directory?(path)
+  }.select { |path|
+    File.basename(path) == "metadata"
+  }.collect { |path|
+    File.dirname(path)
+  }.select { |path|
+    qe = BT2::BTQueryExecutor.new( component_class: ctf_fs, object_name: "babeltrace.support-info", params: { "input" => path,  "type" => "directory" } )
+    qe.query.value["weight"] > 0.5
+  }
+raise "Could not find lttng trace" if trace_locations.size == 0
 
-events = {}
-traces.each { |t|
-  events[t.handle_id] = t.get_event_decl_list.collect(&:name)
+
+consume = lambda { |iterator, _|
+  mess = iterator.next_messages
+  mess.each { |m|
+    if m.type == :BT_MESSAGE_TYPE_EVENT
+      e = m.event
+      str = "#{Time.at(0, m.get_default_clock_snapshot.ns_from_origin, :nsec).strftime("%H:%M:%S.%9L")}"
+      str << " - #{e.stream.trace.get_environment_entry_value_by_name("hostname")}" if $options[:context]
+      str << " - " << e.get_common_context_field.value.collect { |k, v| "#{k}: #{v}" }.join(", ") if $options[:context]
+      str << " - #{e.name}: "
+      l = $event_lambdas[e.name]
+      if l
+        str << l.call(e.payload_field.value)
+      else
+        str << e.payload_field.to_s
+      end
+      puts str
+    end
+  }
 }
 
-it = c.iter_create
-it.each { |ev|
-  name = events[ev.handle_id][ev.id]
-  str = "#{ev.timestamp.strftime("%H:%M:%S.%9L")}"
-  str << " - " << ev.top_level_scope(:STREAM_EVENT_CONTEXT).value.collect { |k, v| "#{k}: #{v}" }.join(", ") if $options[:context]
-  str << " - #{name}: "
-  defi = ev.top_level_scope(:EVENT_FIELDS)
-  l = $event_lambdas[name]
-  if l
-    str << l.call(defi.value).to_s
-  else
-    str << defi.value.to_s
-  end
-  puts str
+graph = BT2::BTGraph.new
+comps = trace_locations.each_with_index.collect { |trace_location, i| graph.add_component(ctf_fs, "trace_#{i}", params: {"inputs" => [ trace_location ] }) }
+comp2 = graph.add_component(utils_muxer, "mux")
+comp3 = graph.add_simple_sink("babeltrace_cuda", consume)
+i = 0
+comps.each { |comp|
+  ops = comp.output_ports
+  ops.each { |op|
+    ip = comp2.input_port(i)
+    i += 1
+    graph.connect_ports(op, ip)
+  }
 }
 
+op = comp2.output_port(0)
+ip = comp3.input_port(0)
+graph.connect_ports(op, ip)
+graph.run
