--- a/cuda/babeltrace_cuda.in
+++ b/cuda/babeltrace_cuda.in
@@ -9,7 +9,8 @@ require 'pp'
 require 'babeltrace_cuda_lib'
 
 $options = {
-  context: false
+  context: false,
+  restrict: false
 }
 
 OptionParser.new do |opts|
@@ -17,6 +18,10 @@ OptionParser.new do |opts|
 
   opts.on("-c", "--[no-]context", "Add context information") do |context|
     $options[:context] = context
+  end
+
+  opts.on("-r", "--[no-]restrict", "Restrict output to recognized events") do |restrict|
+    $options[:restrict] = restrict
   end
 
   opts.on("-h", "--help", "Prints this help") do
@@ -30,6 +35,9 @@ OptionParser.new do |opts|
   end
 
 end.parse!
+
+$restrict = $options[:restrict]
+$context = $options[:context]
 
 ctf_fs = BT2::BTPlugin.find("ctf").get_source_component_class_by_name("fs")
 utils_muxer = BT2::BTPlugin.find("utils").get_filter_component_class_by_name("muxer")
@@ -53,17 +61,19 @@ consume = lambda { |iterator, _|
   mess.each { |m|
     if m.type == :BT_MESSAGE_TYPE_EVENT
       e = m.event
-      str = "#{Time.at(0, m.get_default_clock_snapshot.ns_from_origin, :nsec).strftime("%H:%M:%S.%9L")}"
-      str << " - #{e.stream.trace.get_environment_entry_value_by_name("hostname")}" if $options[:context]
-      str << " - " << e.get_common_context_field.value.collect { |k, v| "#{k}: #{v}" }.join(", ") if $options[:context]
-      str << " - #{e.name}: "
       l = $event_lambdas[e.name]
-      if l
-        str << l.call(e.payload_field.value)
-      else
-        str << e.payload_field.to_s
+      if l || !$restrict
+        str = "#{Time.at(0, m.get_default_clock_snapshot.ns_from_origin, :nsec).strftime("%H:%M:%S.%9L")}"
+        str << " - #{e.stream.trace.get_environment_entry_value_by_name("hostname")}" if $context
+        str << " - " << e.get_common_context_field.value.collect { |k, v| "#{k}: #{v}" }.join(", ") if $context
+        str << " - #{e.name}: "
+        if l
+          str << l.call(e.payload_field.value)
+        else
+          str << e.payload_field.to_s
+        end
+        puts str
       end
-      puts str
     end
   }
 }
