--- a/xprof/xprof.sh.erb.in
+++ b/xprof/xprof.sh.erb.in
@@ -219,13 +219,13 @@ summary() {
     if [ -n "$trace" ]; then
         # Todo filter direcly in the babeltrace
 <% if languages.include?("opencl") %>
-        $bindir/babeltrace_opencl -c $lttng_last_session | grep --binary-files=text lttng_ust_opencl
+        $bindir/babeltrace_opencl -r -c $lttng_last_session
 <% end %>
 <% if languages.include?("ze") %>
-        $bindir/babeltrace_ze -c $lttng_last_session | grep --binary-files=text lttng_ust_ze
+        $bindir/babeltrace_ze -r -c $lttng_last_session
 <% end %>
 <% if languages.include?("cuda") %>
-        $bindir/babeltrace_cuda -c $lttng_last_session | grep --binary-files=text lttng_ust_cuda
+        $bindir/babeltrace_cuda -r -c $lttng_last_session
 <% end %>
     fi
 
