--- a/cuda/babeltrace_cuda.in
+++ b/cuda/babeltrace_cuda.in
@@ -6,6 +6,8 @@ require 'babeltrace2'
 require 'find'
 require 'yaml'
 require 'pp'
+
+$event_lambdas = {}
 require 'babeltrace_cuda_lib'
 
 $options = {
