--- a/ze/babeltrace_ze.in
+++ b/ze/babeltrace_ze.in
@@ -6,6 +6,8 @@ require 'babeltrace2'
 require 'find'
 require 'yaml'
 require 'pp'
+
+$event_lambdas = {}
 require 'babeltrace_ze_lib'
 
 $options = {
