--- a/cuda/tracer_cuda.sh.in
+++ b/cuda/tracer_cuda.sh.in
@@ -114,6 +114,7 @@ else
 fi
 export LD_PRELOAD=$libdir/libTracerCUDA.so:$LD_PRELOAD
 export LTTNG_UST_ALLOW_BLOCKING=1
+export LLTNG_UST_CUDA_VERBOSE=1
 if [ ! -z "$cudart" ]
 then
   if [ -z "$LTTNG_UST_CUDA_LIBCUDART" ]
@@ -128,6 +129,7 @@ then
     export LD_LIBRARY_PATH=$pkglibdir/cudart:$LD_LIBRARY_PATH
   fi
   export LD_PRELOAD=$libdir/libTracerCUDART.so:$LD_PRELOAD
+  export LLTNG_UST_CUDART_VERBOSE=1
 fi
 lttng start
 
