Fix utf8 nightmare

--- a/ze/tracer_ze.sh.in
+++ b/ze/tracer_ze.sh.in
@@ -104,7 +104,7 @@ else
 fi
 export LD_PRELOAD=$libdir/libTracerZE.so:$LD_PRELOAD
 export LTTNG_UST_ALLOW_BLOCKING=1
-export LLTNG_UST_ZE_VERBOSE=1
+export LTTNG_UST_ZE_VERBOSE=1
 lttng start
 
 ctrl_c() {
