--- a/xprof/xprof.sh.erb.in
+++ b/xprof/xprof.sh.erb.in
@@ -306,6 +306,9 @@ done
 
 if [ -n "$debug" ]; then
     set -x
+    export LTTNG_UST_ZE_VERBOSE=1
+    export LTTNG_UST_OPENCL_VERBOSE=1
+    export LTTNG_UST_CUDA_VERBOSE=1
     export LIBBABELTRACE2_INIT_LOG_LEVEL=WARNING
     export BABELTRACE_CLI_LOG_LEVEL=WARNING
 else
