--- a/xprof/xprof.sh.erb.in
+++ b/xprof/xprof.sh.erb.in
@@ -142,6 +142,7 @@ trace_and_summary() {
     fi
     lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_zet:*
     export LTTNG_UST_ZE_PROFILE=1
+    export LTTNG_UST_ZE_PARANOID_DRIFT=1
     lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ze_build:log*
     lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ze_profiling:*
     lttng $quiet enable-event --channel=blocking-channel --userspace lttng_ust_ze_properties:*
