--- a/.github/workflows/presubmit.yml
+++ b/.github/workflows/presubmit.yml
@@ -23,7 +23,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils
+      - run: sudo apt update; sudo apt install -y gcc g++ lttng-tools liblttng-ust-dev ruby ruby-dev elfutils libelf-dev
       - run: gem install --user-install cast-to-yaml nokogiri babeltrace2 opencl_ruby_ffi
       - run: wget https://www.efficios.com/files/babeltrace/babeltrace2-2.0.4.tar.bz2
       - run: tar -xjvf babeltrace2-2.0.4.tar.bz2
