Added live feature to tracer and trace readers using babeltrace2 ctf.lttng-live source plugin.

--- a/opencl/babeltrace_opencl.in
+++ b/opencl/babeltrace_opencl.in
@@ -12,7 +12,8 @@ require 'babeltrace_opencl_lib'
 
 $options = {
   context: false,
-  restrict: false
+  restrict: false,
+  live: false
 }
 
 OptionParser.new do |opts|
@@ -31,6 +32,10 @@ OptionParser.new do |opts|
     exit
   end
 
+  opts.on("--live", "Enable live display of the trace") do
+    $options[:live] = true
+  end
+
   opts.on("-v", "--version", "Print the version string") do
     puts File.read(File.join(DATADIR, "version"))
     exit
@@ -40,21 +45,27 @@ end.parse!
 
 $restrict = $options[:restrict]
 $context = $options[:context]
+$live = $options[:live]
 
 ctf_fs = BT2::BTPlugin.find("ctf").get_source_component_class_by_name("fs")
+ctf_lttng_live = BT2::BTPlugin.find("ctf").get_source_component_class_by_name("lttng-live")
 utils_muxer = BT2::BTPlugin.find("utils").get_filter_component_class_by_name("muxer")
 text_pretty = BT2::BTPlugin.find("text").get_sink_component_class_by_name("pretty")
 
-trace_locations = Find.find(*ARGV).reject { |path|
-    FileTest.directory?(path)
-  }.select { |path|
-    File.basename(path) == "metadata"
-  }.collect { |path|
-    File.dirname(path)
-  }.select { |path|
-    qe = BT2::BTQueryExecutor.new( component_class: ctf_fs, object_name: "babeltrace.support-info", params: { "input" => path,  "type" => "directory" } )
-    qe.query.value["weight"] > 0.5
-  }
+if !$live
+  trace_locations = Find.find(*ARGV).reject { |path|
+      FileTest.directory?(path)
+    }.select { |path|
+      File.basename(path) == "metadata"
+    }.collect { |path|
+      File.dirname(path)
+    }.select { |path|
+      qe = BT2::BTQueryExecutor.new( component_class: ctf_fs, object_name: "babeltrace.support-info", params: { "input" => path,  "type" => "directory" } )
+      qe.query.value["weight"] > 0.5
+    }
+else
+  trace_locations = ARGV
+end
 raise "Could not find lttng trace" if trace_locations.size == 0
 
 
@@ -81,7 +92,11 @@ consume = lambda { |iterator, _|
 }
 
 graph = BT2::BTGraph.new
-comps = trace_locations.each_with_index.collect { |trace_location, i| graph.add_component(ctf_fs, "trace_#{i}", params: {"inputs" => [ trace_location ] }) }
+if !$live
+  comps = trace_locations.each_with_index.collect { |trace_location, i| graph.add_component(ctf_fs, "trace_#{i}", params: {"inputs" => [ trace_location ] }) }
+else
+  comps = trace_locations.each_with_index.collect { |trace_location, i| graph.add_component(ctf_lttng_live, "trace_#{i}", params: {"inputs" => [ trace_location ], "session-not-found-action" => "end" }) }
+end
 comp2 = graph.add_component(utils_muxer, "mux")
 comp3 = graph.add_simple_sink("babeltrace_opencl", consume)
 i = 0
