--- a/opencl/tracer_opencl.sh.in
+++ b/opencl/tracer_opencl.sh.in
@@ -147,7 +147,7 @@ trap ctrl_c INT
 
 if [ ! -z "$lttng_view" ]
 then
-  lttng view &
+  lttng view --viewer="babeltrace_opencl --context --live" &
   PID=$!
 fi
 "$@"
