--- a/cuda/tracer_cuda.sh.in
+++ b/cuda/tracer_cuda.sh.in
@@ -143,7 +143,7 @@ trap ctrl_c INT
 
 if [ ! -z "$lttng_view" ]
 then
-  lttng view &
+  lttng view --viewer="babeltrace_cuda --context --live" &
   PID=$!
 fi
 "$@"
