--- a/ze/zel_meta_parameters.yaml
+++ b/ze/zel_meta_parameters.yaml
@@ -14,3 +14,7 @@ meta_parameters:
   zelLoaderGetVersionsInternal:
     - [ InOutScalar, num_elems ]
     - [ OutArray, versions, num_elems ]
+  zelLoaderTranslateHandle:
+    - [ OutScalar, handleOut ]
+  zelLoaderTranslateHandleInternal:
+    - [ OutScalar, handleOut ]
